# crypto-lab01

./: .gitignore  CMakeLists.txt  README.md
report/: Makefile  report.tex
results/: t1_r1.txt
src/: gcd.py  main.cpp  run-nfs.sh
tests/: t1.txt  t2.txt
